make the index page singletone class

--- a/war/TMobile.html
+++ b/war/TMobile.html
@@ -47,7 +47,7 @@
             font: normal 10px arial, tahoma, sans-serif;
         }
     </style>
-    <link rel="stylesheet" href="tmobile.css">
+    <link rel="stylesheet" href="TMobile.css">
 
 </head>
 <body>
